expo_error.log
env: load .env
env: export EXPO_PUBLIC_SUPABASE_URL EXPO_PUBLIC_SUPABASE_ANON_KEY
Starting project at C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main
JsonFileError: Error parsing JSON: {
  "expo": {
    "name": "Health Scan",
    "slug": "health-scan",
    "version": "1.0.0",
    "orientation": "portrait",
    "icon": "./assets/images/icon.png",
    "scheme": "healthscan",
    "userInterfaceStyle": "automatic",
    "newArchEnabled": true,
    "splash": {
      "image": "./assets/images/icon.png",
      "resizeMode": "contain",
      "backgroundColor": "#1E3A2B"
    },
    "ios": {
      "supportsTablet": true,
      "bundleIdentifier": "com.healthscan.app",
      "infoPlist": {
        "ITSAppUsesNonExemptEncryption": false
      }
    },
    "android": {
      "versionCode": 2,
      "edgeToEdgeEnabled": true,
      "adaptiveIcon": {
        "foregroundImage": "./assets/images/icon.png",
        "backgroundColor": "#1E3A2B"
      },
      "package": "com.healthscan.app",
      "permissions": [
        "CAMERA",
        "com.android.vending.BILLING"
      ],
      "blockedPermissions": [
        "android.permission.RECORD_AUDIO",
        "android.permission.READ_EXTERNAL_STORAGE",
        "android.permission.WRITE_EXTERNAL_STORAGE",
        "android.permission.READ_MEDIA_IMAGES",
        "android.permission.READ_MEDIA_VIDEO",
        "android.permission.SYSTEM_ALERT_WINDOW"
      ]
    },
    "androidNavigationBar": {
      "barStyle": "light-content",
      "enforceContrast": false
    },
    "web": {
      "bundler": "metro",
      "output": "single",
      "favicon": "./assets/images/favicon.png"
    },
    "plugins": [
      "expo-router",
      "expo-font",
      "expo-web-browser",
      [
        "expo-camera",
        {
          "cameraPermission": "Health Scan a besoin d'acceder a votre camera pour capturer des photos destinees a l'analyse sante par IA."
        }
      ],
      [
        "expo-notifications",
        {
          "icon": "./assets/images/icon.png",
          "color": "#1E3A2B",
          "sounds": []
        }
      ]
      ],
      "expo-localization"
    ],
    "experiments": {
      "typedRoutes": true
    },
    "extra": {
      "router": {},
      "eas": {
        "projectId": "5c05cea9-b48e-4c50-aba8-bdb9855c9cd1"
      }
    },
    "owner": "malo6002"
  }
}

 File: C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\app.json
 Cause: SyntaxError: JSON5: invalid character ']' at 73:5
  71 |       ],
  72 |       "expo-localization"
> 73 |     ],
     |     ^
  74 |     "experiments": {
  75 |       "typedRoutes": true
  76 |     },
JsonFileError: Error parsing JSON: {
  "expo": {
    "name": "Health Scan",
    "slug": "health-scan",
    "version": "1.0.0",
    "orientation": "portrait",
    "icon": "./assets/images/icon.png",
    "scheme": "healthscan",
    "userInterfaceStyle": "automatic",
    "newArchEnabled": true,
    "splash": {
      "image": "./assets/images/icon.png",
      "resizeMode": "contain",
      "backgroundColor": "#1E3A2B"
    },
    "ios": {
      "supportsTablet": true,
      "bundleIdentifier": "com.healthscan.app",
      "infoPlist": {
        "ITSAppUsesNonExemptEncryption": false
      }
    },
    "android": {
      "versionCode": 2,
      "edgeToEdgeEnabled": true,
      "adaptiveIcon": {
        "foregroundImage": "./assets/images/icon.png",
        "backgroundColor": "#1E3A2B"
      },
      "package": "com.healthscan.app",
      "permissions": [
        "CAMERA",
        "com.android.vending.BILLING"
      ],
      "blockedPermissions": [
        "android.permission.RECORD_AUDIO",
        "android.permission.READ_EXTERNAL_STORAGE",
        "android.permission.WRITE_EXTERNAL_STORAGE",
        "android.permission.READ_MEDIA_IMAGES",
        "android.permission.READ_MEDIA_VIDEO",
        "android.permission.SYSTEM_ALERT_WINDOW"
      ]
    },
    "androidNavigationBar": {
      "barStyle": "light-content",
      "enforceContrast": false
    },
    "web": {
      "bundler": "metro",
      "output": "single",
      "favicon": "./assets/images/favicon.png"
    },
    "plugins": [
      "expo-router",
      "expo-font",
      "expo-web-browser",
      [
        "expo-camera",
        {
          "cameraPermission": "Health Scan a besoin d'acceder a votre camera pour capturer des photos destinees a l'analyse sante par IA."
        }
      ],
      [
        "expo-notifications",
        {
          "icon": "./assets/images/icon.png",
          "color": "#1E3A2B",
          "sounds": []
        }
      ]
      ],
      "expo-localization"
    ],
    "experiments": {
      "typedRoutes": true
    },
    "extra": {
      "router": {},
      "eas": {
        "projectId": "5c05cea9-b48e-4c50-aba8-bdb9855c9cd1"
      }
    },
    "owner": "malo6002"
  }
}

 File: C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\app.json
 Cause: SyntaxError: JSON5: invalid character ']' at 73:5
  71 |       ],
  72 |       "expo-localization"
> 73 |     ],
     |     ^
  74 |     "experiments": {
  75 |       "typedRoutes": true
  76 |     },
    at parseJsonString (C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\node_modules\@expo\json-file\build\JsonFile.js:198:19)
    at JsonFile.read (C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\node_modules\@expo\json-file\build\JsonFile.js:159:12)
    at getStaticConfig (C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\node_modules\@expo\config\build\getConfig.js:64:38)
    at getConfig (C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\node_modules\@expo\config\build\Config.js:206:85)
    at startAsync (C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\node_modules\expo\node_modules\@expo\cli\build\src\start\startAsync.js:129:68)
    at expoStart (C:\Users\maloh\OneDrive\Bureau\1-main (3)\1-main\node_modules\expo\node_modules\@expo\cli\build\src\start\index.js:146:12)
